Use toList from the same stream